[package]
name = "sqlbon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
relm4 = { git = "https://github.com/Relm4/Relm4.git", features = ["macros"] }
relm4-components = { git = "https://github.com/Relm4/Relm4.git" }
tracker = "0.1.1"
native-dialog = "0.6.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tap = "1.0.1"
itertools = "0.10.3"
once_cell = "1.14.0"
num_enum = "0.5.7"

[profile.release]
lto = "yes"
strip = "symbols"

[patch.crates-io]
tracker = { git = "https://github.com/N4tus/Tracker" }
tracker-macros = { git = "https://github.com/N4tus/Tracker" }
